--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "response/response",
+    "name": "ihsanfawzan/response",
     "description": "Standarize response",
     "keywords": [
         "response",
@@ -11,7 +11,7 @@
     "authors": [
         {
             "name": "ihsan",
-            "email": "ihsan.fawzan@aqi.co.id",
+            "email": "fawzanihsan@gmail.com",
             "role": "Developer"
         }
     ],
